syntax = "proto3";


package GrpcService.Protos;


service PeopleService {
	rpc Create(Person) returns (Person);
	rpc Read(Void) returns (People);
	rpc ReadById(Id) returns (Person);
	rpc Update(Person) returns (Void);
	rpc Delete(Id) returns (Void);
}

message Void {

}

message Person {
	int32 id = 1;
	string firstName = 2;
	string lastName = 3;
}

message People {
	repeated Person collection = 1;
}

message Id {
	int32 value = 1;
}

